* 22 May 2017 - v0.2 - Added support for configurations without xorg.conf, blacklisting nouveau.

* 10 May 2017 - v0.1 - Initial Release